fixed project title and description alignment

--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -239,12 +239,16 @@ max-width: 100vw;
 }
 .project-title{
     position: absolute;
-    left: 25vw;
-    top: 10vh;
+    left: 40vw;
+    top: 8vh;
+    width: 40vw;
+    word-wrap: break-word;
     }
 .project-description{
-    padding-top: 0;
-    left: 6vw;
+    margin-top: 2%;
+    left: 18.5vw;
+    width: 40vw;
+    word-wrap: break-word;
 }
 .summary-video {
    margin-left: 30%;
